// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render a lazy image with a height and width 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with a height, width and crop it 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="600px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?h=800&w=600&sm=c 600w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;

exports[`Image should render a lazy image with width only 1`] = `
<React.Fragment>
  <t
    afterLoad={[Function]}
    alt="altText"
    beforeLoad={[Function]}
    className="lazy-img"
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc=""
    sizes="800px,(max-width: 600px) 560px,(max-width: 400px) 360px"
    src="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags"
    srcSet="//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=800 800w,//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=600 600w,//i1-qa.adis.ws/i/bloblogltd/friends-shopping-bags?w=400 400w"
    threshold={100}
    visibleByDefault={false}
    wrapperClassName=""
  />
  <JSXStyle
    id="4022069848"
  >
    img.lazy-img{width:100%;}
  </JSXStyle>
</React.Fragment>
`;
